fix(about-page): update header color to ensure better visibility

--- a/src/app/about/about.page.scss
+++ b/src/app/about/about.page.scss
@@ -7,7 +7,7 @@
 
     h2 {
         font-weight: 700;
-        color: var(--ion-color-dark);
+        color: #000;
         margin-bottom: 5px;
     }
 
